kubernetes/main/apps/flux-system/addons/app/capacitor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.judahrand.net
spec:
  ingressClassName: internal
  rules:
    - host: capacitor.judahrand.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  name: http
